--- a/app/src/main/res/layout/activity_game_detail.xml
+++ b/app/src/main/res/layout/activity_game_detail.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/baseline_broken_image_24"
+            tools:src="@drawable/baseline_broken_image_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -31,6 +31,7 @@
             style="@style/tv_header_style"
             app:layout_constraintTop_toBottomOf="@id/iv_game_image"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0"
             app:layout_constraintEnd_toStartOf="@id/btn_library"/>
 
         <TextView
