--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -21,68 +21,75 @@
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
         android:id="@+id/tv_game_title"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/iv_poster"
         tools:text="Title"
         android:maxLines="1"
         android:ellipsize="marquee"
+        android:layout_margin="@dimen/view_margin"
         style="@style/tv_header_style" />
     <TextView
         android:id="@+id/tv_ratings"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/rating"
         style="@style/tv_medium_game_item"
+        android:layout_margin="@dimen/view_margin"
         app:layout_constraintTop_toBottomOf="@id/tv_game_title"
         app:layout_constraintStart_toStartOf="@id/tv_game_title"/>
     <TextView
         android:id="@+id/tv_metacritic"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/metacritic"
         style="@style/tv_medium_game_item"
+        android:layout_margin="@dimen/view_margin"
+        android:visibility="invisible"
         app:layout_constraintTop_toBottomOf="@id/tv_ratings"
         app:layout_constraintStart_toStartOf="@id/tv_ratings"/>
     <TextView
         android:id="@+id/tv_platforms"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/platform"
         android:maxLines="2"
         android:ellipsize="end"
         style="@style/tv_medium_game_item"
+        android:layout_margin="@dimen/view_margin"
         app:layout_constraintTop_toBottomOf="@id/tv_metacritic"
         app:layout_constraintStart_toStartOf="@id/tv_metacritic"/>
     <TextView
         android:id="@+id/tv_released_date"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/released_date"
         style="@style/tv_medium_game_item"
+        android:layout_margin="@dimen/view_margin"
         app:layout_constraintTop_toBottomOf="@id/tv_platforms"
         app:layout_constraintStart_toStartOf="@id/tv_platforms"/>
     <TextView
         android:id="@+id/tv_genres"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/genre_genrenya"
         android:maxLines="1"
         android:ellipsize="end"
         style="@style/tv_medium_game_item"
+        android:layout_margin="@dimen/view_margin"
         app:layout_constraintTop_toBottomOf="@id/tv_released_date"
         app:layout_constraintStart_toStartOf="@id/tv_released_date" />
     <ImageButton
         android:id="@+id/btn_library"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/baseline_library_add_24"
+        android:src="@drawable/baseline_delete_forever_24"
         android:backgroundTint="@color/gray"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:layout_constraintStart_toStartOf="@id/tv_genres"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_genres"
         tools:ignore="contentDescription"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
