--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -13,7 +13,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_game_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/tv_no_data"
@@ -21,6 +22,6 @@
         android:layout_height="wrap_content"
         android:text="@string/no_data_available"
         style="@style/no_data_style"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_centerInParent="true"/>
 </RelativeLayout>
