--- a/app/src/main/res/layout/card_image_dialog.xml
+++ b/app/src/main/res/layout/card_image_dialog.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.imageview.ShapeableImageView
+    android:id="@+id/iv_preview_image"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="@dimen/image_corner"
+    android:scaleType="fitXY"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/iv_preview_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"
-        app:shapeAppearanceOverlay="@style/rounded_image"
-        tools:src="@drawable/appicon"
-        tools:ignore="ContentDescription"/>
-
-</androidx.cardview.widget.CardView>
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:adjustViewBounds="true"
+    app:shapeAppearanceOverlay="@style/rounded_image"
+    tools:src="@drawable/appicon"
+    tools:ignore="ContentDescription"/>
