--- a/app/src/main/res/layout/custom_detail_toolbar.xml
+++ b/app/src/main/res/layout/custom_detail_toolbar.xml
@@ -4,11 +4,17 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/dark_background"
-    app:logo="@drawable/appicon">
+    android:background="@color/dark_background">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/baseline_arrow_back_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
         <ImageView
             android:id="@+id/btn_refresh"
             android:layout_width="wrap_content"
