--- a/app/src/main/res/layout/fragment_sub_game_item.xml
+++ b/app/src/main/res/layout/fragment_sub_game_item.xml
@@ -5,6 +5,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/dark_background">
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/search_view"
+        style="@style/search_bar_style"
+        app:iconifiedByDefault="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="@string/search" />
+
+    <Spinner
+        android:id="@+id/sp_order_by"
+        android:layout_width="@dimen/spinner_width"
+        android:layout_height="wrap_content"
+        style="@style/spinner_style"
+        android:layout_marginStart="@dimen/view_margin"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_view"
+        tools:text="test" />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_sub_game_list"
         android:layout_width="match_parent"
@@ -12,6 +33,6 @@
         tools:listitem="@layout/item_game"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/sp_order_by"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
