--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="image_corner">20dp</dimen>
     <dimen name="card_margin">20dp</dimen>
     <dimen name="loading_margin">15dp</dimen>
+    <dimen name="spinner_width">110dp</dimen>
 </resources>
