--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -1,68 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".presentation.view.storeview.StoreDetailActivity">
-<androidx.core.widget.NestedScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/dark_background">
-
-    <RelativeLayout
+    <include
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <include
-            android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        layout="@layout/custom_detail_toolbar"/>
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/dark_background">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/custom_detail_toolbar"/>
+            android:layout_height="match_parent">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_store_poster"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/baseline_broken_image_24"
-            android:layout_below="@id/toolbar"
-            style="@style/shapeable_image_view_style"
-            tools:ignore="contentDescription"/>
-        <TextView
-            android:id="@+id/tv_store_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Title"
-            android:layout_below="@id/iv_store_poster"
-            style="@style/tv_header_style"/>
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_store_poster"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/baseline_broken_image_24"
+                style="@style/shapeable_image_view_style"
+                tools:ignore="contentDescription"/>
+            <TextView
+                android:id="@+id/tv_store_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Title"
+                android:layout_below="@id/iv_store_poster"
+                style="@style/tv_header_style"/>
 
-        <TextView
-            android:id="@+id/tv_store_desc_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/about_us"
-            style="@style/tv_header_style"
-            android:layout_below="@id/tv_store_title"/>
-        <TextView
-            android:id="@+id/tv_store_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="desc"
-            style="@style/tv_small_style"
-            android:layout_below="@id/tv_store_desc_title"/>
+            <TextView
+                android:id="@+id/tv_store_desc_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/about_us"
+                style="@style/tv_header_style"
+                android:layout_below="@id/tv_store_title"/>
+            <TextView
+                android:id="@+id/tv_store_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="desc"
+                style="@style/tv_small_style"
+                android:layout_below="@id/tv_store_desc_title"/>
 
-        <TextView
-            android:id="@+id/tv_store_game_list"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/popular_games"
-            style="@style/tv_header_style"
-            android:layout_below="@id/tv_store_desc"/>
-        <FrameLayout
-            android:id="@+id/fl_fragment_game_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_store_game_list"/>
+            <TextView
+                android:id="@+id/tv_store_game_list"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/popular_games"
+                style="@style/tv_header_style"
+                android:layout_below="@id/tv_store_desc"/>
+            <FrameLayout
+                android:id="@+id/fl_fragment_game_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_store_game_list"/>
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</LinearLayout>
